[gd_scene load_steps=53 format=3 uid="uid://c81kq738lr4mf"]

[ext_resource type="Script" path="res://Scripts/Fase-02.gd" id="1_ucuin"]
[ext_resource type="PackedScene" uid="uid://c8q4vxqrdjdpd" path="res://Characters/lombinho.tscn" id="2_tbf1r"]
[ext_resource type="Script" path="res://Scripts/Control-f2.gd" id="3_nwyxh"]
[ext_resource type="Texture2D" uid="uid://ocnshgq3axj7" path="res://HUD/Coração/Coracao1.png" id="4_gwi48"]
[ext_resource type="Texture2D" uid="uid://b7cl0vmtbgvue" path="res://HUD/Coração/Coracao2.png" id="5_iclsq"]
[ext_resource type="Texture2D" uid="uid://humnehf3121o" path="res://HUD/Coração/Coracao11.png" id="6_a5s07"]
[ext_resource type="Texture2D" uid="uid://dj1ptarnaxc7h" path="res://HUD/Coração/Coracao12.png" id="7_bul6x"]
[ext_resource type="Texture2D" uid="uid://eo0fh164o5gr" path="res://HUD/Coração/Coracao13.png" id="8_oceeo"]
[ext_resource type="Texture2D" uid="uid://cfbubktdath4w" path="res://HUD/Coração/Coracao14.png" id="9_pdu7f"]
[ext_resource type="Texture2D" uid="uid://bru1qompnknm" path="res://HUD/Coração/Coracao15.png" id="10_yink3"]
[ext_resource type="Texture2D" uid="uid://ctdmsvlkbjax6" path="res://HUD/Coração/Coracao16.png" id="11_ud0ge"]
[ext_resource type="Texture2D" uid="uid://c8fcs5phmdhdx" path="res://HUD/Coração/Coracao17.png" id="12_skajr"]
[ext_resource type="Texture2D" uid="uid://dfl6vg1sdv8h0" path="res://HUD/Coração/Coracao3.png" id="13_00mii"]
[ext_resource type="Texture2D" uid="uid://saq8cqhhoevi" path="res://HUD/Coração/Coracao4.png" id="14_mb6rq"]
[ext_resource type="Texture2D" uid="uid://brdha8mb774ph" path="res://HUD/Coração/Coracao5.png" id="15_k8ctg"]
[ext_resource type="Texture2D" uid="uid://bgxvk6krqygo2" path="res://HUD/Coração/Coracao6.png" id="16_2j5rp"]
[ext_resource type="Texture2D" uid="uid://bi32coglyurdq" path="res://HUD/Coração/Coracao7.png" id="17_piad4"]
[ext_resource type="Texture2D" uid="uid://cctgamvbbcxdl" path="res://HUD/Coração/Coracao8.png" id="18_c6tuu"]
[ext_resource type="Texture2D" uid="uid://lexu7xh01nmw" path="res://HUD/Coração/Coracao9.png" id="19_o1ckw"]
[ext_resource type="Texture2D" uid="uid://dqlujklf5klmj" path="res://HUD/Coração/Coracao10.png" id="20_wobs2"]
[ext_resource type="FontFile" uid="uid://d0xjs1baebxx" path="res://HUD/Fonte/pixChicago.ttf" id="21_wd4t2"]
[ext_resource type="Texture2D" uid="uid://cbii7qp4bas4t" path="res://HUD/Lombinho/Lombinho1.png" id="22_lkvn2"]
[ext_resource type="Texture2D" uid="uid://dfm7ms3huimy" path="res://HUD/Lombinho/Lombinho2.png" id="23_p0p4g"]
[ext_resource type="Texture2D" uid="uid://dfdv1i4u83586" path="res://UI/Ampulheta/Ampulheta1.png" id="24_6yoml"]
[ext_resource type="PackedScene" uid="uid://cnmwlr8wkf4ym" path="res://cenas/pause_menu.tscn" id="24_dewl0"]
[ext_resource type="Texture2D" uid="uid://5rnir41aihr6" path="res://UI/Ampulheta/Ampulheta2.png" id="25_fyucg"]
[ext_resource type="PackedScene" uid="uid://pdd43txu2ir5" path="res://cenas/game_over_screen.tscn" id="25_ptu63"]
[ext_resource type="Texture2D" uid="uid://cigs4ekvb83ke" path="res://UI/Ampulheta/Ampulheta3.png" id="26_jbl4o"]
[ext_resource type="Texture2D" uid="uid://ik66nq4pe2be" path="res://UI/Ampulheta/Ampulheta4.png" id="27_ynysc"]
[ext_resource type="Script" path="res://Scripts/transition.gd" id="33_uxgc2"]
[ext_resource type="Shader" path="res://Shaders/transition.gdshader" id="34_0mctf"]
[ext_resource type="PackedScene" uid="uid://b1hd5xyud053v" path="res://Objetos - Mundo 1/tilemap-f1-2.tscn" id="34_1opx7"]
[ext_resource type="Script" path="res://Scripts/ColorRect1.gd" id="35_3c7i3"]
[ext_resource type="Texture2D" uid="uid://caovh0w484aiw" path="res://Background/Céu.png" id="35_iiyb8"]
[ext_resource type="PackedScene" uid="uid://2y1trft2bcpu" path="res://Blocks/fimdefase.tscn" id="36_bt5sj"]
[ext_resource type="Texture2D" uid="uid://dbvbjpxk2y6ud" path="res://Background/Montanhas2.png" id="36_kqvhv"]
[ext_resource type="Shader" path="res://Shaders/movimento_nuvens.gdshader" id="37_duaot"]
[ext_resource type="Texture2D" uid="uid://bd5y6yyb1sjfp" path="res://Background/Nuvens2.png" id="38_xm43d"]
[ext_resource type="Texture2D" uid="uid://cx3fkstetx6r4" path="res://Background/Montanhas1.png" id="39_5gv8e"]
[ext_resource type="Texture2D" uid="uid://d0l8mtptb4out" path="res://Background/Nuvens1.png" id="40_scywt"]
[ext_resource type="PackedScene" uid="uid://cybh137713rnh" path="res://Enemies/lobo.tscn" id="41_fed36"]
[ext_resource type="Texture2D" uid="uid://dmo830nx4qh8y" path="res://Objetos - Mundo 2/Background/Céu.png" id="42_06h1q"]
[ext_resource type="Texture2D" uid="uid://cwqhdnob0b0wu" path="res://Objetos - Mundo 2/Background/Arbusto 3.png" id="43_popl8"]
[ext_resource type="Texture2D" uid="uid://c4hqtvs0mdrua" path="res://Objetos - Mundo 2/Background/Arbusto 2.png" id="44_fhprw"]
[ext_resource type="Texture2D" uid="uid://blr7lqcts623e" path="res://Objetos - Mundo 2/Background/Arbusto 1.png" id="45_v7efi"]
[ext_resource type="Texture2D" uid="uid://qjv27ch2rpj4" path="res://Objetos - Mundo 2/Background/Arbusto 0.png" id="46_jt1nk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b0ilb"]
shader = ExtResource("34_0mctf")
shader_parameter/lines = 10.0
shader_parameter/threshold = 0.0
shader_parameter/line_color_a = Color(0.984314, 0.635294, 0.768627, 1)
shader_parameter/line_color_b = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_o3pmy"]
frames = 17
speed_scale = 10.0
frame_0/texture = ExtResource("4_gwi48")
frame_1/texture = ExtResource("5_iclsq")
frame_1/duration = 1.0
frame_2/texture = ExtResource("13_00mii")
frame_2/duration = 1.0
frame_3/texture = ExtResource("14_mb6rq")
frame_3/duration = 1.0
frame_4/texture = ExtResource("15_k8ctg")
frame_4/duration = 1.0
frame_5/texture = ExtResource("16_2j5rp")
frame_5/duration = 1.0
frame_6/texture = ExtResource("17_piad4")
frame_6/duration = 1.0
frame_7/texture = ExtResource("18_c6tuu")
frame_7/duration = 1.0
frame_8/texture = ExtResource("19_o1ckw")
frame_8/duration = 1.0
frame_9/texture = ExtResource("20_wobs2")
frame_9/duration = 1.0
frame_10/texture = ExtResource("6_a5s07")
frame_10/duration = 1.0
frame_11/texture = ExtResource("7_bul6x")
frame_11/duration = 1.0
frame_12/texture = ExtResource("8_oceeo")
frame_12/duration = 1.0
frame_13/texture = ExtResource("9_pdu7f")
frame_13/duration = 1.0
frame_14/texture = ExtResource("10_yink3")
frame_14/duration = 1.0
frame_15/texture = ExtResource("11_ud0ge")
frame_15/duration = 1.0
frame_16/texture = ExtResource("12_skajr")
frame_16/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_1o6w5"]
frames = 2
frame_0/texture = ExtResource("22_lkvn2")
frame_0/duration = 3.0
frame_1/texture = ExtResource("23_p0p4g")
frame_1/duration = 0.25

[sub_resource type="AnimatedTexture" id="AnimatedTexture_re12c"]
frames = 4
frame_0/texture = ExtResource("24_6yoml")
frame_0/duration = 0.25
frame_1/texture = ExtResource("25_fyucg")
frame_1/duration = 0.25
frame_2/texture = ExtResource("26_jbl4o")
frame_2/duration = 0.25
frame_3/texture = ExtResource("27_ynysc")
frame_3/duration = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uhu6e"]
shader = ExtResource("37_duaot")
shader_parameter/velocidade = 0.05

[sub_resource type="CircleShape2D" id="CircleShape2D_ogrfk"]
radius = 29.0175

[node name="Fase-02" type="Node2D"]
script = ExtResource("1_ucuin")

[node name="fimdefase" parent="." instance=ExtResource("36_bt5sj")]
position = Vector2(2486, 434)
next_level = "res://cenas/history_2_3.tscn"

[node name="Lombinho" parent="." instance=ExtResource("2_tbf1r")]
position = Vector2(529, 411)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(1e-05, 1e-05)
offset = Vector2(240, 0)
zoom = Vector2(2, 2)
limit_left = 10
limit_top = 0
limit_bottom = 610

[node name="transition" type="CanvasLayer" parent="."]
script = ExtResource("33_uxgc2")

[node name="ColorRect" type="ColorRect" parent="transition"]
material = SubResource("ShaderMaterial_b0ilb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("35_3c7i3")
metadata/_edit_use_anchors_ = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("3_nwyxh")

[node name="MarginContainer" type="MarginContainer" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="coracao-container" type="HBoxContainer" parent="HUD/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="HUD/Control/MarginContainer/coracao-container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AnimatedTexture_o3pmy")

[node name="Label2" type="Label" parent="HUD/Control/MarginContainer/coracao-container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("21_wd4t2")
theme_override_font_sizes/font_size = 24
text = "x"

[node name="Label3" type="Label" parent="HUD/Control/MarginContainer/coracao-container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("21_wd4t2")
theme_override_font_sizes/font_size = 24
text = "00"

[node name="lombinho-container" type="HBoxContainer" parent="HUD/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="HUD/Control/MarginContainer/lombinho-container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AnimatedTexture_1o6w5")

[node name="Label2" type="Label" parent="HUD/Control/MarginContainer/lombinho-container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("21_wd4t2")
theme_override_font_sizes/font_size = 24
text = "Lombinho"

[node name="timer" type="HBoxContainer" parent="HUD/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="HUD/Control/MarginContainer/timer"]
layout_mode = 2
texture = SubResource("AnimatedTexture_re12c")
expand_mode = 3

[node name="Timer" type="Timer" parent="HUD/Control/MarginContainer/timer"]
autostart = true

[node name="Label2" type="Label" parent="HUD/Control/MarginContainer/timer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("21_wd4t2")
theme_override_font_sizes/font_size = 24
text = "1:59"

[node name="pause_menu" parent="HUD" instance=ExtResource("24_dewl0")]
visible = false

[node name="GameOverScreen" parent="HUD" instance=ExtResource("25_ptu63")]
visible = false

[node name="TileMap" parent="." instance=ExtResource("34_1opx7")]
layer_0/tile_data = PackedInt32Array(917504, 2, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 983040, 5, 0, 1048576, 5, 0, 983041, 3, 0, 1048577, 3, 0, 983042, 3, 0, 1048578, 3, 0, 983043, 3, 0, 1048579, 3, 0, 983044, 3, 0, 1048580, 3, 0, 983045, 3, 0, 1048581, 3, 0, 983046, 3, 0, 1048582, 3, 0, 983047, 3, 0, 1048583, 3, 0, 983048, 3, 0, 1048584, 3, 0, 983049, 3, 0, 1048585, 3, 0, 983050, 3, 0, 1048586, 3, 0, 983051, 3, 0, 1048587, 3, 0, 983052, 3, 0, 1048588, 3, 0, 983053, 3, 0, 1048589, 3, 0, 983054, 3, 0, 1048590, 3, 0, 983055, 3, 0, 1048591, 3, 0, 983056, 3, 0, 1048592, 3, 0, 983057, 3, 0, 1048593, 3, 0, 983058, 3, 0, 1048594, 3, 0, 983059, 3, 0, 1048595, 3, 0, 983060, 3, 0, 1048596, 3, 0, 983061, 3, 0, 1048597, 3, 0, 983062, 3, 0, 1048598, 3, 0, 983063, 3, 0, 1048599, 3, 0, 983064, 3, 0, 1048600, 3, 0, 983065, 3, 0, 1048601, 3, 0, 917530, 0, 0, 983066, 3, 0, 1048602, 4, 0, 1114113, 4, 0, 1114114, 4, 0, 1114115, 4, 0, 1114116, 4, 0, 1114117, 4, 0, 1114118, 4, 0, 1114119, 4, 0, 1114120, 4, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 4, 0, 1114137, 4, 0, 1114138, 4, 0, 1048603, 4, 0, 1114139, 4, 0, 1048604, 4, 0, 1114140, 4, 0, 1048605, 4, 0, 1114141, 4, 0, 1048606, 4, 0, 1114142, 4, 0, 1048607, 4, 0, 1114143, 4, 0, 1048608, 4, 0, 1114144, 4, 0, 1048609, 4, 0, 1114145, 4, 0, 1048610, 4, 0, 1114146, 4, 0, 917531, 0, 0, 983067, 3, 0, 917532, 0, 0, 983068, 3, 0, 917533, 0, 0, 983069, 3, 0, 917534, 0, 0, 983070, 3, 0, 917535, 0, 0, 983071, 3, 0, 917536, 0, 0, 983072, 3, 0, 917537, 0, 0, 983073, 3, 0, 917538, 0, 0, 983074, 3, 0, 917539, 0, 0, 983075, 3, 0, 1048611, 3, 0, 917540, 0, 0, 983076, 3, 0, 1048612, 3, 0, 917541, 0, 0, 983077, 3, 0, 1048613, 3, 0, 917542, 0, 0, 983078, 3, 0, 1048614, 3, 0, 917543, 0, 0, 983079, 3, 0, 1048615, 3, 0, 917544, 0, 0, 983080, 3, 0, 1048616, 3, 0, 917545, 0, 0, 983081, 3, 0, 1048617, 3, 0, 917546, 0, 0, 983082, 3, 0, 1048618, 3, 0, 917547, 0, 0, 983083, 3, 0, 1048619, 3, 0, 917548, 0, 0, 983084, 3, 0, 1048620, 3, 0, 917549, 0, 0, 983085, 3, 0, 1048621, 3, 0, 917550, 0, 0, 983086, 3, 0, 1048622, 3, 0, 917551, 0, 0, 983087, 3, 0, 1048623, 3, 0, 917552, 0, 0, 983088, 3, 0, 1048624, 3, 0, 917553, 0, 0, 983089, 3, 0, 1048625, 3, 0, 917554, 0, 0, 983090, 3, 0, 1048626, 3, 0, 917555, 0, 0, 983091, 3, 0, 1048627, 3, 0, 917556, 0, 0, 983092, 3, 0, 1048628, 3, 0, 917557, 0, 0, 983093, 3, 0, 1048629, 3, 0, 917558, 0, 0, 983094, 3, 0, 1048630, 3, 0, 917559, 0, 0, 983095, 3, 0, 1048631, 3, 0, 917560, 0, 0, 983096, 3, 0, 1048632, 3, 0, 917561, 0, 0, 983097, 3, 0, 1048633, 3, 0, 917562, 0, 0, 983098, 3, 0, 1048634, 3, 0, 917563, 0, 0, 983099, 3, 0, 1048635, 3, 0, 917564, 0, 0, 983100, 3, 0, 1048636, 3, 0, 917565, 0, 0, 983101, 3, 0, 1048637, 3, 0, 917566, 0, 0, 983102, 3, 0, 1048638, 3, 0, 917567, 0, 0, 983103, 3, 0, 1048639, 3, 0, 917568, 0, 0, 983104, 3, 0, 1048640, 3, 0, 917569, 0, 0, 983105, 3, 0, 1048641, 3, 0, 917570, 0, 0, 983106, 3, 0, 1048642, 3, 0, 917571, 0, 0, 983107, 3, 0, 1048643, 3, 0, 917572, 0, 0, 983108, 3, 0, 1048644, 3, 0, 917573, 0, 0, 983109, 3, 0, 1048645, 3, 0, 917574, 0, 0, 983110, 3, 0, 1048646, 3, 0, 917575, 0, 0, 983111, 3, 0, 1048647, 3, 0, 917576, 0, 0, 983112, 3, 0, 1048648, 3, 0, 917577, 0, 0, 983113, 3, 0, 1048649, 3, 0, 917578, 0, 0, 983114, 3, 0, 1048650, 3, 0, 1114147, 4, 0, 1114148, 4, 0, 1114149, 4, 0, 1114150, 4, 0, 1114151, 4, 0, 1114152, 4, 0, 1114153, 4, 0, 1114154, 4, 0, 1114155, 4, 0, 1114156, 4, 0, 1114157, 4, 0, 1114158, 4, 0, 1114159, 4, 0, 1114160, 4, 0, 1114161, 4, 0, 1114162, 4, 0, 1114163, 4, 0, 1114164, 4, 0, 1114165, 4, 0, 1114166, 4, 0, 1114167, 4, 0, 1114168, 4, 0, 1114169, 4, 0, 1114170, 4, 0, 1114171, 4, 0, 1114172, 4, 0, 1114173, 4, 0, 1114174, 4, 0, 1114175, 4, 0, 1114176, 4, 0, 1114177, 4, 0, 1114178, 4, 0, 1114179, 4, 0, 1114180, 4, 0, 1114181, 4, 0, 1114182, 4, 0, 1114183, 4, 0, 1114184, 4, 0, 1114185, 4, 0, 1114186, 4, 0, 1114112, 5, 0, 917583, 1, 0, 917579, 0, 0, 983115, 3, 0, 1048651, 3, 0, 1114187, 4, 0, 917580, 0, 0, 917581, 0, 0, 1048653, 3, 0, 917582, 0, 0, 983116, 3, 0, 1048652, 3, 0, 1114188, 4, 0, 983117, 3, 0, 1114189, 4, 0, 983118, 3, 0, 1048654, 3, 0, 1114190, 4, 0, 983119, 6, 0, 1048655, 6, 0, 1114191, 6, 0)

[node name="fundofazenda" type="ParallaxBackground" parent="."]

[node name="05" type="ParallaxLayer" parent="fundofazenda"]
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofazenda/05"]
texture = ExtResource("35_iiyb8")
centered = false

[node name="04" type="ParallaxLayer" parent="fundofazenda"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofazenda/04"]
texture = ExtResource("36_kqvhv")
centered = false

[node name="03" type="ParallaxLayer" parent="fundofazenda"]
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(736, 0)

[node name="nuvens_fundo" type="Sprite2D" parent="fundofazenda/03"]
texture_repeat = 2
material = SubResource("ShaderMaterial_uhu6e")
texture = ExtResource("38_xm43d")
centered = false

[node name="02" type="ParallaxLayer" parent="fundofazenda"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofazenda/02"]
texture_filter = 1
texture = ExtResource("39_5gv8e")
centered = false

[node name="01" type="ParallaxLayer" parent="fundofazenda"]
visible = false
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofazenda/01"]
texture = ExtResource("40_scywt")
centered = false

[node name="Lobo" parent="." instance=ExtResource("41_fed36")]
position = Vector2(118, 387)

[node name="fundofloresta" type="ParallaxBackground" parent="."]
visible = false

[node name="5" type="ParallaxLayer" parent="fundofloresta"]
motion_mirroring = Vector2(736, 0)

[node name="texture" type="Sprite2D" parent="fundofloresta/5"]
texture = ExtResource("42_06h1q")
centered = false

[node name="4" type="ParallaxLayer" parent="fundofloresta"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofloresta/4"]
texture = ExtResource("43_popl8")
centered = false

[node name="3" type="ParallaxLayer" parent="fundofloresta"]
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofloresta/3"]
texture = ExtResource("44_fhprw")
centered = false

[node name="2" type="ParallaxLayer" parent="fundofloresta"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofloresta/2"]
texture = ExtResource("45_v7efi")
centered = false

[node name="1" type="ParallaxLayer" parent="fundofloresta"]
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(736, 0)

[node name="Sprite2D" type="Sprite2D" parent="fundofloresta/1"]
texture = ExtResource("46_jt1nk")
centered = false

[node name="trocadefundo" type="Area2D" parent="."]
position = Vector2(2163, 418)

[node name="CollisionShape2D" type="CollisionShape2D" parent="trocadefundo"]
position = Vector2(-44.0002, 2)
shape = SubResource("CircleShape2D_ogrfk")

[connection signal="timeout" from="HUD/Control/MarginContainer/timer/Timer" to="HUD/Control" method="_on_timer_timeout"]
[connection signal="body_entered" from="trocadefundo" to="." method="_on_area_2d_body_entered"]
